# MovieDatabaseProject

./: CMakeLists.txt  README.md
database/: imoviedatabase.h  moviedatabase.cpp  moviedatabase.h
include/: movie.h  moviedatabasemenu.h  movieduration.h  releasedate.h  supportingcast.h
moviecontroller/: moviecontroller.h
src/: movie.cpp  moviedatabasemenu.cpp  movieduration.cpp  releasedate.cpp  supportingcast.cpp
